--- a/main.css
+++ b/main.css
@@ -7,21 +7,63 @@ body {
     border: 1px dashed black;
 }
 
-.sidebar {
-    height: 100vh;
+#navbar {
+    height: 50px;
+    width: 75vw;
 }
 
-.sidebar .list {
-    top: 50px;
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 50px;
+  }
+  
+  .sticky + .content {
+    padding-top: 60px;
+  }
+
+.table {
+	display: table;   /* Allow the centering to work */
+	margin: 0 auto;
 }
+
+ul#horizontal-list {
+	min-width: 696px;
+	list-style: none;
+	padding-top: 0px;
+	}
+	ul#horizontal-list li {
+        display: inline;
+        padding-right: 100px;
+	}
+
 
 .webpage {
-    grid-template-columns: 150px 1fr;
+    /*grid-template-columns: 150px 1fr;*/
+}
+
+#navbar {
+    background-color: rgba(55, 148, 55, 0.86);
+}
+
+.blogContainer {
+    width: 75vw;
+    margin-left: 10px;
+}
+
+.blogContainer img {
+    margin: 0px 15px 15px 0px;
+}
+
+.blogElement {
+    margin-top: 25px;
 }
 
 .header {
     display: flex;
     justify-content: center;
+    height: 120px;
 }
 
 .heading {
@@ -29,14 +71,20 @@ body {
 }
 
 .mainPage {
-    grid-template-rows: 100px 800px 100px;
+    /*grid-template-rows: 100px 800px 100px;*/
 }
 
 .mainContent {
 }
 
 .footer {
+    height: 75px;
+    margin-top: 50px;
     grid-template-columns: 1fr 1fr 1fr;
+}
+
+.hidden {
+    display: none;
 }
 
 .footerBox {
@@ -50,4 +98,6 @@ body {
     justify-content: right;
     align-items: flex-end;
     padding-right: 50px;
+    position: fixed;
+    right: 0px;
 }
