--- a/main.css
+++ b/main.css
@@ -66,6 +66,7 @@ ul#horizontal-list {
     height: 120px;
     background-color: rgb(63,71,209);
     margin-left: .6vw;
+    margin-right: .6vw;
 }
 
 .heading {
