--- a/main.css
+++ b/main.css
@@ -10,6 +10,8 @@ body {
     height: 50px;
     width: 100vw;
     z-index: 1;
+    background-color: rgba(55, 181, 69, 0.86);
+
 }
 
 .sticky {
@@ -37,7 +39,7 @@ ul#horizontal-list {
 	}
 	ul#horizontal-list li {
         display: inline;
-        padding-right: 200px;
+        padding-right: 5vw;
 	}
 
 
@@ -55,11 +57,6 @@ ul#horizontal-list {
 
 .right {
 
-}
-
-#navbar {
-    background-color: rgba(55, 181, 69, 0.86);
-    margin-left: .6vw;
 }
 
 .blogContainer {
@@ -89,8 +86,6 @@ ul#horizontal-list {
     justify-content: center;
     height: 120px;
     background-color: rgb(63,71,209);
-    margin-left: .6vw;
-    margin-right: .6vw;
 }
 
 .heading {
