--- a/main.css
+++ b/main.css
@@ -70,6 +70,26 @@ ul#horizontal-list {
 
 }
 
+.newsHolder {
+    border: 1px dashed black;
+    height: 40vh;
+    margin-left: 5vw;
+    margin-right: 20vw;
+    margin-top: 2vh;
+}
+
+.newsHolder:hover {
+    cursor: pointer;
+    -webkit-box-shadow: 0px 1px 21px 0px rgba(50, 50, 50, 0.83);
+    -moz-box-shadow:    0px 1px 21px 0px rgba(50, 50, 50, 0.83);
+    box-shadow:         0px 1px 21px 0px rgba(50, 50, 50, 0.83);
+}
+
+.newsHolder img {
+    height: 40vh;
+    width: auto;
+}
+
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
