--- a/main.css
+++ b/main.css
@@ -71,11 +71,14 @@ ul#horizontal-list {
 }
 
 .newsHolder {
-    border: 1px dashed black;
     height: 40vh;
     margin-left: 5vw;
     margin-right: 20vw;
     margin-top: 2vh;
+    grid-template-areas: "newsPreviewImage newsHeader"
+    "newsPreviewImage newsPreview"
+    "newsPreviewImage newsPreview"
+    "newsPreviewImage newsPreview";
 }
 
 .newsHolder:hover {
@@ -83,6 +86,23 @@ ul#horizontal-list {
     -webkit-box-shadow: 0px 1px 21px 0px rgba(50, 50, 50, 0.83);
     -moz-box-shadow:    0px 1px 21px 0px rgba(50, 50, 50, 0.83);
     box-shadow:         0px 1px 21px 0px rgba(50, 50, 50, 0.83);
+}
+
+.newsPreviewImage {
+    grid-area: newsPreviewImage;
+}
+
+.newsHeader {
+    grid-area: newsHeader;
+    font-size: 200%;
+    text-align: center;
+    margin-top: 3%;
+}
+
+.newsPreview {
+    grid-area: newsPreview;
+    padding: 0 1vw 0 1vw;
+    font-size: 120%;
 }
 
 .newsHolder img {
