--- a/main.css
+++ b/main.css
@@ -64,6 +64,15 @@ ul#horizontal-list {
     }
 }
 
+.mainImg {
+    float: right;
+}
+
+.article {
+    width: 70%;
+    padding: 2% 0 0 2%;
+}
+
 .modal {
     background-color: rgb(63,71,209);
     position: absolute;
